--- a/src/css/base.css
+++ b/src/css/base.css
@@ -56,6 +56,7 @@
 
 .button {
     text-decoration: none;
+    -webkit-tap-highlight-color: transparent;
     list-style: none;
     border: none;
     outline: 0px;
