--- a/src/css/style.css
+++ b/src/css/style.css
@@ -89,7 +89,7 @@ body {
     /* margin-top: 0px;
     margin-bottom: 0px; */
     visibility: visible;
-    height: 100%;
+    /* height: 100%; */
     /* transition: all 0.3s ease;
     animation: opacity 0.1s ease;
     pointer-events: none; */
@@ -110,6 +110,23 @@ body {
     font-size: 13px;
 }
 
+#press-here {
+    /* flex-direction: column; */
+    /* justify-content: right; */
+    /* align-items: flex-end; */
+    color: var(--dark-highlight-color);
+}
+#press-here i {
+    margin-top: 3px;
+    font-size: 22px;
+    margin-left: 3px;
+}
+#press-here h4 {
+    margin-left: 2px;
+    text-align: left;
+    font-size: 16px;
+}
+
 #banking-info-container {
     height: 168px;
     margin-left: 0px;
@@ -118,17 +135,9 @@ body {
     transition: all 0.3s ease;
 }
 
-option {
-    /* text-align: center;
-    text-align: -webkit-center; */
-}
-
 #banking-info__list {
     margin-bottom: 16px;
-    /* padding-left: calc(50% - 62px); */
-    /* text-align: center;
-    text-align: -webkit-center; */
-    padding-left: 32px;
+    padding-left: 28px;
     appearance: none;
     font-size: 18px;
     color: var(--dark-highlight-color);
