--- a/src/css/base.css
+++ b/src/css/base.css
@@ -4,8 +4,11 @@
     box-sizing: border-box;
 }
 :root {
+    --light-highlight-color: #378ece;
     --dark-highlight-color: #6083b7;
     --dark-primary-color: linear-gradient(145deg, #2e2e2e, #373737);
+    --light-primary-color: #e0e0e0;
+    /* --light-primary-color: linear-gradient(145deg, #cacaca, #f0f0f0); */
     --text-color-white: rgb(228, 228, 228);
     --primary-font: -apple-system, BlinkMacSystemFont, sans-serif;
     /* --primary-font: 'Rubik', sans-serif; */
@@ -84,6 +87,32 @@
     box-shadow: inset 6px 6px 12px #202020, inset -6px -6px 12px #464646;
 }
 
+.light {
+    background: var(--light-primary-color) !important;
+}
+
+.button.light {
+    color: #333333;
+    background: var(--light-primary-color);
+    box-shadow: 6px 6px 12px #bebebe, -6px -6px 12px #ffffff;
+}
+.button--pressed.light {
+    box-shadow: inset 6px 6px 12px #bebebe, inset -6px -6px 12px #ffffff;
+}
+
 .button--highlight {
-    background: var(--highlight-color);
+    background: var(--dark-highlight-color);
+}
+
+.button--highlight.light {
+    color: rgb(235, 235, 235);
+    background: var(--light-highlight-color) !important;
+}
+
+.highlight-text {
+    color: var(--dark-highlight-color);
+}
+
+.highlight-text.light {
+    color: var(--light-highlight-color);
 }
