--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,7 +5,7 @@ a {
 body {
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     font-family: var(--primary-font);
     color: var(--text-color-white);
     background: var(--dark-primary-color);
@@ -24,10 +24,10 @@ body {
     justify-content: center;
     align-items: center;
     padding-bottom: 16px;
-    padding-top: 42px;
+    padding-top: 36px;
     width: 100%;
     height: 340px;
-    /* margin-top: 24px; */
+    margin-top: 24px;
     margin-bottom: 16px;
     border-radius: 24px;
 }
@@ -59,7 +59,6 @@ body {
 .profile__add-to-contact-btn {
     width: 50%;
     height: 36px;
-    background: var(--dark-highlight-color);
     border-radius: 50px;
 }
 
@@ -83,9 +82,6 @@ body {
 
 /* More info  */
 
-.more-info-container {
-}
-
 .more-info i {
     margin-right: 8px;
     font-size: 28px;
@@ -97,8 +93,8 @@ body {
 
 #press-here {
     justify-content: flex-end;
-    color: var(--dark-highlight-color);
 }
+
 h4 {
     padding: 0;
     margin: 0;
@@ -123,10 +119,6 @@ h4 {
     -ms-user-select: none;
     user-select: none;
 }
-#press-here p:last-child {
-    /* letter-spacing: 1.5px; */
-}
-
 #banking-info-container {
     opacity: 1;
     visibility: visible;
@@ -142,7 +134,6 @@ h4 {
     padding-left: 36px;
     appearance: none;
     font-size: 18px;
-    color: var(--dark-highlight-color);
     font-family: var(--primary-font);
 }
 /* More details */
@@ -160,13 +151,16 @@ h4 {
 
 .more-details p {
     display: inline-block;
-    font-size: 16px;
+    font-size: 18px;
     flex: 1;
     text-align: center;
 }
 
+#details-mail p {
+    font-size: 16px;
+}
+
 .more-details-btn {
-    background: var(--dark-highlight-color);
     height: 36px;
     margin-right: 16px;
     border-radius: 15px;
