--- a/src/css/base.css
+++ b/src/css/base.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    transition: color 0.5s, background 0.5s;
 }
 :root {
     --light-highlight-color: #378ece;
