try fix bug not copy

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -13,6 +13,21 @@
     --primary-font: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
+a {
+    color: white;
+    text-decoration: none;
+}
+body {
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    font-family: var(--primary-font);
+    color: var(--text-color-white);
+    background: var(--dark-primary-color);
+    overflow: scroll;
+    min-height: 100vh;
+}
+
 .grid {
     width: 320px;
     max-width: 100%;
