--- a/src/css/base.css
+++ b/src/css/base.css
@@ -2,7 +2,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    transition: color 0.5s, background 0.5s;
 }
 :root {
     --light-highlight-color: #378ece;
@@ -11,6 +10,19 @@
     --light-primary-color: #e0e0e0;
     --text-color-white: rgb(228, 228, 228);
     --primary-font: -apple-system, BlinkMacSystemFont, sans-serif;
+}
+a,
+div {
+    transition: background 0.5s;
+}
+
+p,
+h2,
+h3,
+h4,
+h1,
+h5 {
+    /* transition: color 0.5s; */
 }
 
 a {
@@ -25,7 +37,7 @@ body {
     color: var(--text-color-white);
     background: var(--dark-primary-color);
     overflow: scroll;
-    min-height: 100vh;
+    min-height: 90vh;
 }
 
 .grid {
